Make sure canvas has full size without scrollbars

--- a/css/skifree.css
+++ b/css/skifree.css
@@ -1,3 +1,9 @@
+html, body {
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+}
+
 #skifree-canvas {
 	position: absolute;
 	top: 0;
